# cv-job-matcher

./: Dockerfile  README.md  docker-compose.yml  integration_guide.md  project_overview.md  pyproject.toml  requirements.txt  setup.py
app/: config.py  constants.py  main.py
app/api/: dependencies.py  middleware.py  routes.py  schemas.py
app/core/: cv_processor.py  embedding_service.py  job_processor.py  llm.py  matcher.py  rag_system.py  ranking.py  tasks.py
app/database/: connection.py  repositories.py  vector_db.py
app/models/: base.py  cv.py  job.py  match.py  user.py
app/rag/: chunking.py  generator.py  knowledge_base.py  prompts.py  retriever.py
app/scrapers/: base_scraper.py  factory.py  glassdoor_scraper.py  indeed_scraper.py  linkedin_scraper.py  linkedin_search_scraper.py  utils.py
app/services/: cv_service.py  job_search_service.py  job_service.py  matching_service.py  notification_service.py  rag_service.py  scraping_service.py  user_service.py
app/tests/: conftest.py  test_api.py  test_core.py  test_integration.py  test_ml.py  test_services.py
app/utils/: cache.py  file_utils.py  logging.py  metrics.py  text_utils.py  (+1 more)
docs/: api.md  architecture.md  development.md  presentation.md  user_guide.md
scratch/: setup_db.py
scripts/: benchmark.py  check_db_stats.py  deploy.py  download_models.py  migrate_json_to_toon.py  populate_knowledge_base.py  setup_db.py  simulate_match.py  test_hyde.py  test_intelligence_layer.py  test_linkedin_account.py  test_matcher.py  test_processors.py  test_scrapers.py  verify_final_pipeline.py  verify_pipeline.py
(+13 files in other folders)
